--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -1,7 +1,7 @@
 name: Vercel Deploy (prebuilt)
 
 
-# add manual trigger to deploy
+
 
 on:
   push:
@@ -13,6 +13,9 @@ on:
       - package.json
       - vercel.json
   pull_request:
+
+  # add manual trigger to deploy
+  workflow_dispatch: {}
 
 jobs:
   deploy:
@@ -35,6 +38,9 @@ jobs:
 
       - name: Install deps
         run: npm ci
+
+      - name: Install Vercel CLI
+        run: npm install -g vercel
 
       - name: Build app
         run: npm run build
