--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -1,17 +1,17 @@
 name: Vercel Deploy (prebuilt)
 
-
-
-
 on:
   push:
     branches: [ master ]
     paths:
       - src/**
-      - app/**
       - public/**
       - package.json
       - vercel.json
+      - next.config.js
+      - tailwind.config.js
+      - postcss.config.js
+      - tsconfig.json
   pull_request:
 
   # add manual trigger to deploy
@@ -42,11 +42,21 @@ jobs:
       - name: Install Vercel CLI
         run: npm install -g vercel
 
-      - name: Build app
-        run: npm run build
+      - name: Pull Vercel Environment Information
+        run: vercel pull --yes --environment=preview --token=$VERCEL_TOKEN
+        if: github.event_name == 'pull_request'
 
-      - name: Vercel build (output)
+      - name: Pull Vercel Environment Information (Production)
+        run: vercel pull --yes --environment=production --token=$VERCEL_TOKEN
+        if: github.ref == 'refs/heads/master'
+
+      - name: Build Project Artifacts (Preview)
         run: vercel build --token=$VERCEL_TOKEN
+        if: github.event_name == 'pull_request'
+
+      - name: Build Project Artifacts (Production)
+        run: vercel build --prod --token=$VERCEL_TOKEN
+        if: github.ref == 'refs/heads/master'
 
       - name: Deploy Preview
         if: github.event_name == 'pull_request'
