--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@upstash/ratelimit": "^2.0.7",
     "@vercel/kv": "^3.0.0",
+    "framer-motion": "^12.23.26",
     "next": "16.0.10",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
